# foundry_selfmcp

./: .gitignore  README.md  azure.yaml
.github/ISSUE_TEMPLATE/: task.md
agents/: data-agent.yaml  deploy_agent.py
agents/appPackage/: ai-plugin.json  declarativeAgent.json  manifest.json  openapi.json
database/: sample_data.sql  schema.sql
database/metadata/: data_dictionary.json  upload_metadata.py
docs/: 01_poc_concept.md  02_architecture.md  03_deployment_guide.md  04_m365_copilot_deployment.md
infra/: main.bicep  main.bicepparam  main.json
infra/modules/: acr.bicep  ai-foundry.bicep  ai-search.bicep  alerts.bicep  apim.bicep  apim.json  container-apps.bicep  identity.bicep  keyvault-rbac.bicep  keyvault.bicep  monitoring.bicep  networking.bicep  sql.bicep
scripts/: smoke_test.ps1
src/mcp-server/: .env.example  Dockerfile  main.py  pyproject.toml  telemetry.py
src/mcp-server/db/: connection.py
src/mcp-server/tests/: __init__.py  test_tools.py
src/mcp-server/tools/: customers.py  inventory.py  metadata.py  orders.py
